configure properties file